# ergonomic-cpp

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  conanfile.txt  run.ps1
conan-config/Default/profiles/: ergonomic-cpp-debug  ergonomic-cpp-release
conan-config/Mac/profiles/: ergonomic-cpp-debug  ergonomic-cpp-release
conan-config/Windows/profiles/: ergonomic-cpp-debug  ergonomic-cpp-release
conan-config/profiles/: cmake-test-debug  cmake-test-release  ergonomic-cpp-release
lib/MyLibrary/: CMakeLists.txt
src/: main.cpp
src/App/: main.cpp
src/BuildSystem/: build.ps1  run.ps1
src/Libraries/MyLibrary/: Foo.cpp
src/MyApp/: Foo.cpp  Foo.h
src/MyLibrary/: CMakeLists.txt  Foo.h
