cmake_minimum_required(VERSION 3.27.8)

# Mac as of Sonoma macOS 14.3.1 is causing CMake to fail to compile a simple test program.
# This works around it. See https://stackoverflow.com/a/53635241/720021
set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

project(ErgonomicCpp)

set(CMAKE_CXX_STANDARD 17)

find_package(CLI11 CONFIG REQUIRED)
find_package(fmt CONFIG REQUIRED)
find_package(Poco CONFIG REQUIRED)

include_directories(
  src/Libraries
)
add_subdirectory(
  src/Libraries/MyLibrary
)
add_executable(${PROJECT_NAME}
  src/App/main.cpp
  src/App/MyApp/Foo.cpp
)

target_link_libraries(${PROJECT_NAME} MyLibrary CLI11::CLI11 fmt::fmt Poco::Poco)
